# MyTemplateApplication

./: .gitignore  README.md  build.gradle  gradle.properties  mytemplate.jks  settings.gradle
algorithm/: build.gradle
app/: build.gradle  proguard-rules.pro
app/schemas/com.example.administrator.mytemplateapplication.module.user.model.UsersDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/res/animator/: ic_progressani.xml
app/src/main/res/drawable/: ic_progress1av.xml  ic_progress_1.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_test.xml  cutscenes_progress_layout.xml
app/src/main/res/values/: colors.xml  dimens.xml  styles.xml
app/src/test/resources/api-response/: test.json
gradle/wrapper/: gradle-wrapper.properties
ktapp/: build.gradle
ktapp/src/main/: AndroidManifest.xml
ktapp/src/main/res/layout/: activity_login.xml  activity_main.xml
ktapp/src/main/res/values/: strings.xml
sunshine/: build.gradle
transporttracker/: build.gradle
transporttracker/src/main/: AndroidManifest.xml
wavemaker/: CMakeLists.txt  build.gradle
wavemaker/src/androidTest/java/com/example/jzl/wavemaker/: ExampleInstrumentedTest.kt
wavemaker/src/main/: AndroidManifest.xml
wavemaker/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Oscillator.cpp  Oscillator.h  jni-bridge.cpp
wavemaker/src/main/java/com/example/jzl/wavemaker/: MainActivity.kt
wavemaker/src/main/res/layout/: activity_main.xml
wavemaker/src/main/res/values/: strings.xml
wavemaker/src/test/java/com/example/jzl/wavemaker/: ExampleUnitTest.kt
(+227 files in other folders)
